apps/media/calibre/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
  labels:
    app: calibre
    part-of: media
spec:
  selector:
    app: calibre
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: calibre
