apps/media/calibre/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  labels:
    app: calibre
    part-of: media
  annotations:
    cert-manager.io/cluster-issuer: external
    # nginx.ingress.kubernetes.io/auth-url: |-
    #   http://ak-outpost-nginx-ingress.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    # # If you're using domain-level auth, use the authentication URL instead of the application URL
    # nginx.ingress.kubernetes.io/auth-signin: |-
    #   https://$host/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    # nginx.ingress.kubernetes.io/auth-response-headers: |-
    #   Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    # nginx.ingress.kubernetes.io/auth-snippet: |
    #   proxy_set_header X-Forwarded-Host $http_host;
    # traefik.ingress.kubernetes.io/router.middlewares: authentik-ak-outpost-authentik-embedded-outpost@kubernetescrd
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-SCRIPT-NAME /;
      proxy_set_header X-Scheme $scheme;
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffers-size: "256k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Calibre
    gethomepage.dev/group: Media
    gethomepage.dev/icon: calibre.png
    gethomepage.dev/name: Calibre
spec:
  ingressClassName: nginx
  rules:
    - host: calibre.home.8none1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  name: http
  tls:
    - hosts:
        - calibre.home.8none1.com
      secretName: calibre-ingress-tls
